# franka_interactive_controllers

./: CMakeLists.txt  LICENSE  README.md  dependencies.rosinstall  dependencies_dsControl.rosinstall  dependencies_museum.rosinstall  franka_interactive_controllers_plugin.xml  package.xml  setup.py
cfg/: compliance_full_param.cfg  compliance_param.cfg  desired_mass_param.cfg  end-effector-camera.json  end-effector.json  gravity_compensation_param.cfg  minimal_compliance_param.cfg  passive_ds_param.cfg
config/: cooking_tool.yaml  default_controllers_interactive.yaml  desired_nullspace.yaml  external_tool_compensation.yaml  franka_control_node.yaml  franka_control_node_interactive.yaml  franka_interactive_controllers.yaml  franka_interactive_sim_controllers.yaml  impedance_control_additional_params.yaml  passiveDS_impedance_control_additional_params.yaml  pose_impedance_control_additional_params.yaml  target_configuration_nullspace.txt  twist_impedance_control_additional_params.yaml
doc/: commands.txt  icra-demo-instructions.md  mit-museum-demo-instructions.md  mit-museum-installation-instructions.md
doc/instructions/: README.md  basic_robot_control.md  ds_learning.md  executing_ds.md  external_tool_compensation.md  kinesthetic_teaching_recording.md  robot_startup.md  tool_compensation.md
include/franka_cartesian_controllers/: cartesian_force_controller.h  cartesian_impedance_controller_pose_command.h  cartesian_pose_franka_controller.h  cartesian_pose_impedance_controller.h  cartesian_twist_impedance_controller.h  cartesian_velocity_franka_controller.h  passiveDS_impedance_controller.h  passiveDS_impedance_controller_ybw.h
include/franka_joint_controllers/: joint_gravity_compensation_controller.h  joint_impedance_franka_controller.h  joint_position_franka_controller.h  joint_velocity_example_controller.h  joint_velocity_franka_controller.h
include/franka_motion_generators/: libfranka_joint_motion_generator.h
include/franka_utils/: kinematics_utils.hpp  pseudo_inversion.h
launch/: cartesian_impedance_controller_pose_command.launch  cartesian_pose_impedance_controller.launch  cartesian_twist_impedance_controller.launch  franka_control_interactive.launch  franka_interactive_bringup.launch  franka_kinesthetic_teaching.launch  franka_museum_interactive_bringup.launch  franka_museum_kinesthetic_teaching.launch  joint_gravity_compensation_controller.launch  passiveDS_impedance_controller.launch  passive_ds_impedance_controller.launch  robot.rviz  robot_museum.rviz  robot_museum_sim.rviz  simulate_panda_gazebo.launch
launch/rviz/: franka_description.rviz  franka_description_with_marker.rviz
launch/unused-fornow/: joint_impedance_franka_controller.launch
scripts/: franka_cartesian_impedance_pose_command.py  franka_gui_gripper_run.py  franka_museum_inspection_demo.py  franka_to_geometry_messages.py  gripper.py  interactive_marker.py  libfranka_gui_gripper_run.py  test_franka_gripper.py
src/: franka_gripper_run.cpp  franka_gripper_run_node.cpp  franka_gripper_run_ros.cpp  franka_joint_goal_motion_generator.cpp  franka_joint_goal_motion_generator_node.cpp  joint_goal_motion_generator_node.cpp  libfranka_gripper_run.cpp  libfranka_joint_goal_motion_generator.cpp  libfranka_joint_goal_motion_generator_mit.cpp  libfranka_joint_goal_motion_generator_rss.cpp
src/franka_cartesian_controllers/: cartesian_force_controller.cpp  cartesian_impedance_controller_pose_command.cpp  cartesian_pose_franka_controller.cpp  cartesian_pose_impedance_controller.cpp  cartesian_twist_impedance_controller.cpp  cartesian_velocity_franka_controller.cpp  passiveDS_admittance_controller.cpp  passiveDS_impedance_controller.cpp  passiveDS_impedance_controller_ybw.cpp
src/franka_dataflow/: __init__.py  getch.py  wait_for.py
src/franka_joint_controllers/: joint_gravity_compensation_controller.cpp  joint_impedance_example_controller.cpp  joint_impedance_franka_controller.cpp  joint_position_example_controller.cpp  joint_position_franka_controller.cpp  joint_velocity_example_controller.cpp  joint_velocity_franka_controller.cpp
src/franka_motion_generators/: libfranka_joint_motion_generator.cpp
src/franka_utils/: controllers_common.cpp
